Fixed right padding on mobile tile issue

--- a/style.css
+++ b/style.css
@@ -213,6 +213,7 @@ a:visited {
     white-space:normal;
     font-size:.9em;
     padding-top:8px;
+    padding-right:15px;
 }
 
 .tile h1, .tile p {
@@ -523,8 +524,13 @@ a:visited {
         height:320px;
     }
     
+    .tileExcerpt {
+        width:93%
+    }
+    
     .sliderButtonLeft {
         border-radius:0px;
+        margin:0px;
         height:320px;
     }
     
